fix doc validation error
